# anal

./: CMakeLists.txt  README.md  flake.nix  imp_examples.md
.github/workflows/: documentation.yaml
cmake/: MakeDoc.cmake
dummy/: CMakeLists.txt  main.cpp
include/ANAL/: Events.hpp  IArcade.hpp  IAsset.hpp  IDisplay.hpp  IEntity.hpp  IGame.hpp  IModule.hpp  IRenderer.hpp  ISprite.hpp  Vector2.hpp
